--- a/src/WebServer/WebServer.csproj
+++ b/src/WebServer/WebServer.csproj
@@ -32,13 +32,15 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
-    <Compile Include="HttpContext\Request.cs" />
-    <Compile Include="Patterns\Disposable.cs" />
+    <Compile Include="Core\Extensions\ExtensionAttribute.cs" />
+    <Compile Include="Core\Extensions\StringExtensions.cs" />
+    <Compile Include="Server\Request.cs" />
+    <Compile Include="Core\Patterns\Disposable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Utilities\DebugHelper.cs" />
-    <Compile Include="Utilities\Format.cs" />
-    <Compile Include="WebServer.cs" />
+    <Compile Include="Core\Utilities\DebugHelper.cs" />
+    <Compile Include="Core\Utilities\Format.cs" />
+    <Compile Include="Server\HttpServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Hardware" />
@@ -51,4 +53,5 @@
     <Reference Include="System" />
     <Reference Include="System.IO" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
